change Appid and others project settings

--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,10 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.93",
-	"appid": "wx8285c221ef74d732",
+	"appid": "wx5850547a78413e73",
 	"projectname": "weather",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
